--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hyper-kraftvaerk",
-  "version": "1.1.1",
-  "description": "A Kraftvaerk theme for [Hyper™",
+  "name": "@kraftvaerk/hyper",
+  "version": "2.0.0",
+  "description": "A Kraftvaerk theme for Hyper™",
   "main": "index.js",
   "repository": {
     "url": "https://github.com/kraftvaerk/hyper-kraftvaerk",
